tests/test_assets/semantics/arrays/pass/declaration.cog
values: i32[3];

empty: u8[16];

matrix: i32[4][4];

ptrs: i32*[8];