tests/test_assets/semantics/arrays/fail/non_integer_index.cog
values: i32[3];

values[true];

values[1.5];